[package]
name = "tuplify"
version = "1.0.0"
edition = "2021"
authors = ["Alois Masanell <massou@cantina.space>"]
description = "Generic hlist/tuple library"
keywords = ["tuple", "hlist", "generic", "heterogenous_list"]
readme = "readme.md"
include = ["Cargo.toml", "readme.md", "license", "src/**"]
license = "BSD-3-Clause"
categories = ["Rust patterns"]
homepage = "https://github.com/cantina-space/tuplify"
documentation = "https://docs.rs/tuplify"
